tests/baselines/reference/classAbstractFactoryFunction.errors.txt
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractFactoryFunction.ts(9,12): error TS2511: Cannot create an instance of an abstract class.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractFactoryFunction.ts(13,6): error TS2345: Argument of type 'typeof B' is not assignable to parameter of type 'typeof A'.
  Cannot assign an abstract constructor type to a non-abstract constructor type.


==== tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractFactoryFunction.ts (2 errors) ====
    class A {}
    abstract class B extends A {}
    
    function NewA(Factory: typeof A) {
        return new A;
    }
    
    function NewB(Factory: typeof B) {
        return new B;
               ~~~~~
!!! error TS2511: Cannot create an instance of an abstract class.
    }
    
    NewA(A);
    NewA(B);
         ~
!!! error TS2345: Argument of type 'typeof {|B|0|}' is not assignable to parameter of type 'typeof {|A|1|}'.
!!! error TS2345:   Cannot assign an abstract constructor type to a non-abstract constructor type.
!!! annotated symbol 0 tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractFactoryFunction.ts:2:16
!!! annotated symbol 1 tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractFactoryFunction.ts:1:7
    
    NewB(A);
    NewB(B);